--------------------------------------------------------------------------
---------                Ampache -- CHANGELOG                    ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.6-Alpha1
	- Fix refresh of localplay playlist when you delete a track from it
	- Added ability to add Ampache as a search descriptor (Thx Vlet)
	- Correct issue with single song downloads
	- Removed old useless files
	- Added local auth method that uses PHP's PAM module
	- Correct potential security issues due to misuse of REQUEST for write
		operations rather then POST 
		(Thx Raphael Geissert <geissert@debian.org>) 
	- Finished switching to Dba::read() Dba::write() for database calls
		(Thx dipsol)
	- Improved File pattern matching (Thx october.rust)
	- Updated Amazon Album art search to current Amazone API specs 
		(Thx Vlet)
	- Fix typo that caused song count to not be set on tag xml response
        - Fix tag methods so that alpha_match and exact_match work
        - Fix limit and offset not working on search_songs API method
        - Fix import m3u on catalog build so it does something
        - Fix inconsistent view during catalog operations        
	- Sort malformed files into "Unknown (Broken)" rather then leaving
                them in "Unknown (Orphaned)"
	- Fix API democratic voting methods (Thx kindachris)
	- Add server version to API ping response
	- Fix Localplay API methods (Thx thomasa) 
        - Improve bin/catalog_update.inc to allow only verify, clean or add
                (Thx ascheel)
	- Fix issue with batch download and UNC paths (Thx greengeek) 
	- Added config option to turn caching on/off, Default is off
        - Fix issue where file tag pattern was ignore if files have no tag
                structur
        - Add TDRC to list of parsed id3v2 tags
	- Added the rating to a single song view